[ADD]: lab2 variant 18 (second)

--- a/SystemProgramming/SystemProgramming.csproj
+++ b/SystemProgramming/SystemProgramming.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="first_labs\" />
-    <Folder Include="second_labs\" />
+    <Folder Include="first_labs\forms\" />
   </ItemGroup>
 
 </Project>
