[ADD] init lab 7, variant 18 (second)

--- a/SystemProgramming/SystemProgramming.csproj
+++ b/SystemProgramming/SystemProgramming.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="first_labs\forms\" />
+    <Folder Include="second_labs\forms\lab6\" />
   </ItemGroup>
 
 </Project>
