--- a/SystemProgramming/SystemProgramming.csproj
+++ b/SystemProgramming/SystemProgramming.csproj
@@ -11,4 +11,8 @@
     <Folder Include="second_labs\forms\lab6\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.112.2" />
+  </ItemGroup>
+
 </Project>
